<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity$PlaceholderFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="#006d9c"
        android:id="@+id/loginFrame"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/sign_in"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:textSize="20sp"
            android:gravity="center"
            android:id="@+id/textSignin" />

    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/signin_with"
        android:id="@+id/textSigninWidth"
        android:layout_below="@+id/loginFrame"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textSigninWidth"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:divider="@drawable/hdivider"
        android:showDividers="middle"
        android:id="@+id/layoutConnects">

        <ImageView
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:src="@drawable/logo_fb"
            android:tag="facebook"
            android:id="@+id/imageLogoFb" />

        <ImageView
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:src="@drawable/logo_tw"
            android:tag="twitter"
            android:id="@+id/imageLogoTw" />

        <ImageView
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:src="@drawable/logo_google"
            android:tag="google"
            android:id="@+id/imageLogoGoogle" />

        <ImageView
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:src="@drawable/logo_lin"
            android:tag="linkedin"
            android:id="@+id/imageLogoLin" />

        <ImageView
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:src="@drawable/logo_gh"
            android:tag="github"
            android:id="@+id/imageLogoGh" />

    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/OrWithEmail"
        android:id="@+id/textWithEmail"
        android:layout_below="@+id/layoutConnects"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editEmail"
        android:layout_below="@+id/textWithEmail"
        android:layout_centerHorizontal="true"
        android:hint="@string/email" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editPassword"
        android:layout_below="@+id/editEmail"
        android:layout_centerHorizontal="true"
        android:hint="@string/password" />

    <Button
        style="@style/buttonTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/editPassword"
        android:layout_centerHorizontal="true"
        android:text="@string/LOGIN"
        android:onClick="onLoginClick"
        android:id="@+id/loginbtn" />

</RelativeLayout>
